# ai_inspection_env

./: DockerFile  README.md  inference.py  my_env.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
