[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "OpenEnv environment for customer support email triage"
authors = [
    { name = "trisha231" }
]
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pydantic==2.7.1",
    "fastapi",
    "uvicorn",
    "openai==1.30.1",
    "requests",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
